# pcd_block_estimation

./: .gitignore  CMakeLists.txt  README.md
data/: ConcreteBlock.ply  K_1765975331_195477760.txt  T_P_C_1765975331_195477760.txt  calib_zed2i_to_seyond.yaml  pcl.ply  scene_1765975331_195477760.ply  segmented.ply  segmented_concrete_block.ply  view_mask.py
data/debug/: cutout_1765974788_298710784.ply  cutout_1765974789_998733056.ply  cutout_1765974791_998727680.ply  cutout_1765974794_298666496.ply  cutout_1765974798_598681600.ply  cutout_1765974804_198627584.ply
data/dump/: 1765974788_298710784_cloud.ply  1765974789_998733056_cloud.ply  1765974791_998727680_cloud.ply  1765974794_298666496_cloud.ply  1765974798_598681600_cloud.ply  1765974804_198627584_cloud.ply
include/pcd_block_estimation/: mask_projection.hpp  pose_estimation.hpp  template_utils.hpp  utils.hpp  yaml_utils.hpp
src/: extract_pcl_by_mask.cpp  main.cpp  main_dump_processing.cpp  main_extract_pcl_by_mask.cpp  main_full_pipeline.cpp  main_generate_templates.cpp  main_pose_estimator.cpp  mask_projection.cpp  pose_estimation.cpp  template_utils.cpp  utils.cpp  yaml_utils.cpp
